@@ -43,5 +43,5 @@ svn-rw:
 	svn checkout --username=davidrr svn+ssh://davidrr@svn.code.sf.net/p/porg/code/ porg-code
 
 rebuild-README: doc/index.html
-	html2text $< | sed 's/&ast;/*/g' > README
+	html2text $< | $(SED) 's/&ast;/*/g' > README
 
